Rename OpenAPI model
